--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -21,6 +22,7 @@
     "axios": "^1.2.2",
     "chart.js": "^4.1.2",
     "numeral": "^2.0.6",
+    "vue-analytics": "^5.22.1",
     "vuex": "^4.0.2"
   }
 }
