--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
     "@mdi/js": "^7.1.96",
     "axios": "^1.2.2",
     "chart.js": "^4.1.2",
     "numeral": "^2.0.6",
+    "nuxi": "^3.2.0",
     "vue-analytics": "^5.22.1",
     "vuex": "^4.0.2"
   }
