--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,6 +12,7 @@
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.20",
@@ -22,9 +23,14 @@
     "@mdi/js": "^7.1.96",
     "axios": "^1.2.2",
     "chart.js": "^4.1.2",
+    "cookie-universal-nuxt": "^2.2.2",
+    "js-cookie": "^3.0.1",
     "numeral": "^2.0.6",
     "nuxi": "^3.2.0",
+    "universal-cookie": "^4.0.4",
     "vue-analytics": "^5.22.1",
+    "vue3-facebook-login": "^0.0.1",
+    "vue3-google-login": "^2.0.14",
     "vuex": "^4.0.2"
   }
 }
